# hldiscovery

./: Activity.py  LICENSE  LowLevelLogPreprocessingMethods.py  README.md  TInvOperations.py  TInvRecogniser.py  buffer.pnml  console_output.txt  example.pnml  final_log.xes  final_net.pnml  final_net.xes  final_net_inductive.pnml  final_net_inductive2.pnml  final_net_inductive3.pnml  final_net_inductive4.pnml  final_net_inductive5.pnml  final_net_inductive6.pnml  from_paper.xes  highlevelnet.pnml  initial_miner.py  main.py  mapping.json  output.txt  parse_to_gml.py  pnml_to_gml_converter.py  pyproject.toml  subnets.py  t-invariants.py  tInvOperations.py  сеть поболбше.1.2251028129059564290.xes
nets/: final_net_ind0.pnml  final_net_ind1.pnml  final_net_ind10.pnml  final_net_ind11.pnml  final_net_ind12.pnml  final_net_ind13.pnml  final_net_ind14.pnml  final_net_ind15.pnml  final_net_ind16.pnml  final_net_ind17.pnml  final_net_ind18.pnml  final_net_ind19.pnml  final_net_ind2.pnml  final_net_ind20.pnml  final_net_ind21.pnml  final_net_ind22.pnml  final_net_ind3.pnml  final_net_ind4.pnml  final_net_ind5.pnml  final_net_ind6.pnml  final_net_ind7.pnml  final_net_ind8.pnml  final_net_ind9.pnml
processed_nets/: bpi2017.gml  bpi2017.graphml
tests/: AABC.xes  Complete Parallel with Loop.xes  LnestedCycs.xes  No Complete Parallel with Loop.xes  Parallel 2Loops + 1trace.xes  Parallel with Loop + parallel loop.xes  ToyLogsGen  abab.xes  aed.xes  bdbdcdb.xes  or-Choice.xes  parallel+choice.xes  parallel.xes  parallelIncomplet.xes
tests/100/: сеть поболбше.1.5557681416313853777.xes  (+9 more)
(+369 files in other folders)
