[tool.poetry]
name = "hldiscovery"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pm4py = ">=2.2.0,<2.3.0"
pandas = "^1.5.2"
networkx = "^2.8.8"
sympy = "^1.11.1"
numpy = "^1.24.1"


[tool.poetry.group.dev.dependencies]
black = {version = "^23.1a1", allow-prereleases = true}
ipykernel = "^6.19.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
